Added Nicolas Rouquette patch.